added: semver for comparsion of versions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ yansi = "0.5.1"
 async-recursion = "1.0.2"
 clap_complete = "4.1"
 toml = "0.8.8"
+semver = "1.0.22"
 
 [dependencies.chrono]
 version = "0.4.23"
