Handle USR1 kill signal on UNIX

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,6 +78,13 @@ optional = false
 version = "0.2"
 optional = false
 
+[target.'cfg(unix)'.dependencies.nix]
+version = "0.28.0"
+features = ["signal"]
+
+[target.'cfg(unix)'.dependencies.signal-hook]
+version = "0.3.17"
+
 [target.'cfg(target_os = "macos")'.dependencies]
 flate2 = "1.0.26"
 tar = "0.4"
