--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ async-recursion = "1.0.2"
 clap_complete = "4.1"
 toml = "0.8.8"
 semver = "1.0.22"
+sha2 = "0.10.8"
 
 [dependencies.chrono]
 version = "0.4.23"
