change: use macos-latest for arm

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,10 +91,15 @@ jobs:
                       }
                     - {
                           NAME: macos,
-                          OS: macos-latest,
+                          OS: macos-latest-large,
                           PATH: target/optimized/bob,
                       }
                     - { NAME: windows, OS: windows-latest, PATH: build }
+                    - {
+                          NAME: macos-arm,
+                          OS: macos-latest,
+                          PATH: target/optimized/bob,
+                      }
                 tls:
                     - { NAME: Rustls, SUFFIX: "", ARGS: "" }
                     - {
@@ -166,44 +171,5 @@ jobs:
               with:
                   name: bob-linux-aarch64
                   path: "target/aarch64-unknown-linux-gnu/optimized/bob"
-                  if-no-files-found: error
-                  retention-days: 7
-
-    build-macos-arm:
-        needs: [clippy, formatting, check, test]
-        runs-on: macos-latest
-        strategy:
-            matrix:
-                tls:
-                    - { SUFFIX: "", ARGS: "" }
-                    - {
-                          SUFFIX: "-openssl",
-                          ARGS: "--no-default-features --features native-tls",
-                      }
-        steps:
-            - uses: actions/checkout@v2
-            - name: Install Rust
-              uses: actions-rs/toolchain@v1
-              with:
-                  toolchain: stable
-                  target: aarch64-apple-darwin
-                  profile: minimal
-                  override: true
-            - uses: Swatinem/rust-cache@v1
-            - name: Build Bob
-              uses: actions-rs/cargo@v1
-              with:
-                  command: build
-                  args: --locked --profile optimized --target aarch64-apple-darwin ${{ matrix.tls.ARGS }}
-            - name: Check lints
-              uses: actions-rs/cargo@v1
-              with:
-                  command: clippy
-                  args: --verbose -- -D warnings
-            - name: Upload Bob M1 MacOS binary
-              uses: actions/upload-artifact@v2
-              with:
-                  name: "bob-macos-arm${{ matrix.tls.SUFFIX }}"
-                  path: "target/aarch64-apple-darwin/optimized/bob"
                   if-no-files-found: error
                   retention-days: 7
