--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,32 +84,14 @@ jobs:
         strategy:
             matrix:
                 os:
-                    - {
-                          NAME: linux,
-                          OS: ubuntu-latest,
-                          ARCH: x86_64,
-                          PATH: target/optimized/bob,
-                      }
-                    - {
-                          NAME: macos,
-                          OS: macos-13,
-                          ARCH: x86_64,
-                          PATH: target/optimized/bob,
-                      }
-                    - { NAME: windows, OS: windows-latest, ARCH: x86_64, PATH: build }
-                    - {
-                          NAME: macos,
-                          OS: macos-latest,
-                          ARCH: arm,
-                          PATH: target/optimized/bob,
-                      }
+                    - { NAME: linux, OS: ubuntu-latest, ARCH: x86_64, PATH: target/optimized/bob, TARGET: "" }
+                    - { NAME: linux-arm, OS: ubuntu-24.04-arm, ARCH: arm, PATH: target/optimized/bob, TARGET: "" }
+                    - { NAME: macos, OS: macos-13, ARCH: x86_64, PATH: target/optimized/bob, TARGET: "" }
+                    - { NAME: windows, OS: windows-latest, ARCH: x86_64, PATH: build, TARGET: "" }
+                    - { NAME: macos, OS: macos-latest, ARCH: arm, PATH: target/optimized/bob, TARGET: "" }
                 tls:
                     - { NAME: Rustls, SUFFIX: "", ARGS: "" }
-                    - {
-                          NAME: OpenSSL,
-                          SUFFIX: "-openssl",
-                          ARGS: "--no-default-features --features native-tls",
-                      }
+                    - { NAME: OpenSSL, SUFFIX: "-openssl", ARGS: "--no-default-features --features native-tls" }
         runs-on: ${{matrix.os.OS}}
         steps:
             - uses: actions/checkout@v4
@@ -127,7 +109,7 @@ jobs:
               uses: actions-rs/cargo@v1
               with:
                   command: build
-                  args: --locked --profile optimized ${{matrix.tls.ARGS}}
+                  args: --locked --profile optimized ${{ matrix.tls.ARGS }}
             - name: Setup Bob build directory
               run: |
                   mkdir build
@@ -139,40 +121,5 @@ jobs:
               with:
                   name: "bob-${{ matrix.os.NAME }}-${{ matrix.os.ARCH }}${{ matrix.tls.SUFFIX }}"
                   path: ${{ matrix.os.PATH }}
-                  if-no-files-found: error
-                  retention-days: 7
-
-    build-linux-arm:
-        needs: [clippy, formatting, check, test]
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - name: Install Rust
-              uses: actions-rs/toolchain@v1
-              with:
-                  toolchain: stable
-                  target: aarch64-unknown-linux-gnu
-                  profile: minimal
-                  override: true
-            - name: Install aarch64 compiler
-              run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
-            - name: Change linker
-              run: |
-                  mkdir .cargo
-                  cat > .cargo/config << EOF
-                  [target.aarch64-unknown-linux-gnu]
-                  linker = "aarch64-linux-gnu-gcc"
-                  EOF
-            - uses: Swatinem/rust-cache@v1
-            - name: Build Bob
-              uses: actions-rs/cargo@v1
-              with:
-                  command: build
-                  args: --locked --profile optimized --target aarch64-unknown-linux-gnu
-            - name: Upload Bob Linux-aarch64 binary
-              uses: actions/upload-artifact@v4
-              with:
-                  name: bob-linux-aarch64
-                  path: "target/aarch64-unknown-linux-gnu/optimized/bob"
                   if-no-files-found: error
                   retention-days: 7
