--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,7 +155,7 @@ jobs:
             - name: Prepare AppDir
               if: matrix.os.NAME == 'linux'
               run: |
-                  mkdir -p AppDir/usr/bin AppDir/usr/share/icons/hicolor/256x256/apps
+                  mkdir -p AppDir/usr/bin AppDir/usr/share/icons/hicolor/256x256/apps AppDir/usr/share/applications
                   cp target/optimized/bob AppDir/usr/bin/
                   # Ensure you have an icon at resources/bob.png or adjust the path
                   cp resources/bob.png AppDir/usr/share/icons/hicolor/256x256/apps/bob.png
