added some stuff yes

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -53,6 +53,49 @@ jobs:
               with:
                   command: build
                   args: --locked --profile optimized ${{ matrix.tls.ARGS }}
+            - name: Install AppImage tools
+              if: matrix.os.NAME == 'linux' && matrix.tls.NAME == 'Rustls'
+              run: |
+                  sudo apt update && sudo apt install -y libfuse2 # Needed by AppImage/linuxdeploy
+                  
+                  # Determine the correct architecture for linuxdeploy download
+                  DOWNLOAD_ARCH=${{ matrix.os.ARCH }}
+                  if [[ "${{ matrix.os.ARCH }}" == "arm" ]]; then
+                    DOWNLOAD_ARCH="aarch64"
+                  fi
+                  
+                  echo "Downloading linuxdeploy tools for architecture: $DOWNLOAD_ARCH"
+                  wget -c "https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-$DOWNLOAD_ARCH.AppImage" -O linuxdeploy
+                  wget -c "https://github.com/linuxdeploy/linuxdeploy-plugin-appimage/releases/download/continuous/linuxdeploy-plugin-appimage-$DOWNLOAD_ARCH.AppImage" -O linuxdeploy-plugin-appimage
+                  chmod +x linuxdeploy linuxdeploy-plugin-appimage
+
+            - name: Prepare AppDir
+              if: matrix.os.NAME == 'linux' && matrix.tls.NAME == 'Rustls'
+              run: |
+                  mkdir -p AppDir/usr/bin AppDir/usr/share/icons/hicolor/256x256/apps AppDir/usr/share/applications
+                  cp target/optimized/bob AppDir/usr/bin/
+                  cp resources/bob-icon.png AppDir/usr/share/icons/hicolor/256x256/apps/bob.png
+                  cat <<EOF > AppDir/bob.desktop
+                  [Desktop Entry]
+                  Name=Bob Neovim Manager
+                  Exec=bob
+                  Icon=bob
+                  Type=Application
+                  Categories=Utility;Development;
+                  Comment=A cross-platform Neovim version manager
+                  EOF
+                  cp AppDir/bob.desktop AppDir/usr/share/applications/
+                  
+                  # Verify the file exists right before linuxdeploy
+                  ls -l AppDir/usr/bin/bob 
+
+                  export UPD_INFO="gh-releases-zsync|Matsuuu|bob|latest|bob-${{ matrix.os.ARCH }}.AppImage.zsync"
+                  export OUTPUT="bob-${{ matrix.os.ARCH }}${{ matrix.tls.SUFFIX }}.AppImage"
+                  
+                  # Change --executable path to be relative to CWD
+                  ./linuxdeploy --appdir AppDir --executable AppDir/usr/bin/bob --desktop-file AppDir/bob.desktop --icon-file AppDir/usr/share/icons/hicolor/256x256/apps/bob.png --output appimage
+
+
             - name: Setup Bob build directory
               run: |
                   mkdir build
@@ -65,6 +108,14 @@ jobs:
                   name: "bob-${{ matrix.os.NAME }}-${{ matrix.os.ARCH }}${{ matrix.tls.SUFFIX }}"
                   path: ${{ matrix.os.PATH }}
                   if-no-files-found: error
+            - name: Upload Bob AppImage
+              if: matrix.os.NAME == 'linux' && matrix.tls.NAME == 'Rustls'
+              uses: actions/upload-artifact@v4
+              with:
+                  name: "bob-${{ matrix.os.NAME }}-${{ matrix.os.ARCH }}${{ matrix.tls.SUFFIX }}-appimage"
+                  path: "bob-${{ matrix.os.ARCH }}${{ matrix.tls.SUFFIX }}.AppImage*" 
+                  if-no-files-found: error
+                  retention-days: 7
 
     github-release:
         needs: [build]
@@ -87,20 +138,28 @@ jobs:
                   OUTPUT: CHANGELOG.md
             - name: Test changelog
               run: echo CHANGELOG.md
-            - name: Zip artifacts
+            - name: Prepare Release Assets (Zip binaries, keep AppImages separate)
               run: |
                   cd artifacts
-                  for dir in */; do
+                  # Zip directories (binaries)
+                  find . -mindepth 1 -maxdepth 1 -type d -print0 | while IFS= read -r -d $'\0' dir; do
                     base=$(basename "$dir")
                     zip -r "${base}.zip" "$dir"
+                    rm -r "$dir" # Remove original directory after zipping
                   done
+                  # Move AppImages and zsync files out of subdirectories if they exist
+                  find . -mindepth 2 -name '*.AppImage*' -exec mv {} . \;
+                  # Clean up any remaining empty directories from AppImage artifacts
+                  find . -mindepth 1 -maxdepth 1 -type d -empty -delete
+                  echo "Prepared assets:"
+                  ls -l
             - name: Release
               uses: softprops/action-gh-release@v1
               if: startsWith(github.ref, 'refs/tags/')
               with:
                   body_path: CHANGELOG.md
                   files: |
-                      ./artifacts/*.zip
+                      ./artifacts/*
 
     publish-cargo:
         needs: github-release
