--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ jobs:
     check:
         strategy:
             matrix:
-                os: [macos-latest, windows-latest, ubuntu-latest]
+                os: [macos-latest, windows-latest, ubuntu-latest, ubuntu-24.04-arm, macos-13]
         runs-on: ${{matrix.os}}
         steps:
             - name: Checkout
@@ -25,7 +25,7 @@ jobs:
     clippy:
         strategy:
             matrix:
-                os: [macos-latest, windows-latest, ubuntu-latest]
+                os: [macos-latest, windows-latest, ubuntu-latest, ubuntu-24.04-arm, macos-13]
         runs-on: ${{matrix.os}}
         steps:
             - name: Checkout
@@ -45,7 +45,7 @@ jobs:
     test:
         strategy:
             matrix:
-                os: [macos-latest, windows-latest, ubuntu-latest]
+                os: [macos-latest, windows-latest, ubuntu-latest, macos-13, ubuntu-24.04-arm]
         runs-on: ${{matrix.os}}
         steps:
             - name: Checkout
