--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -129,15 +129,6 @@ jobs:
               uses: actions/download-artifact@v4
               with:
                   path: artifacts
-            - name: Generate a changelog
-              uses: orhun/git-cliff-action@v2
-              with:
-                  config: cliff.toml
-                  args: --verbose --current
-              env:
-                  OUTPUT: CHANGELOG.md
-            - name: Test changelog
-              run: echo CHANGELOG.md
             - name: Prepare Release Assets (Zip binaries, keep AppImages separate)
               run: |
                   cd artifacts
@@ -157,7 +148,7 @@ jobs:
               uses: softprops/action-gh-release@v1
               if: startsWith(github.ref, 'refs/tags/')
               with:
-                  body_path: CHANGELOG.md
+                  generate_release_notes: true
                   files: |
                       ./artifacts/*
 
