--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ toml = "0.8.8"
 semver = "1.0.22"
 sha2 = "0.10.8"
 what-the-path = "^0.1.3" 
+sysinfo = "0.35.2"
 
 [dependencies.chrono]
 version = "0.4.23"
