--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,7 +84,7 @@ optional = false
 version = "0.28.0"
 features = ["signal"]
 
-[target.'cfg(target_os = "macos")'.dependencies]
+[target.'cfg(unix)'.dependencies]
 flate2 = "1.0.26"
 tar = "0.4"
 
