--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ clap_complete = "4.1"
 toml = "0.8.8"
 semver = "1.0.22"
 sha2 = "0.10.8"
-what-the-path = "^0.1.3" 
+what-the-path = "^0.1.3"
 sysinfo = "0.35.2"
 
 [dependencies.chrono]
@@ -106,3 +106,18 @@ opt-level = "z"
 strip = true
 lto = true
 codegen-units = 1
+
+[package.metadata.binstall]
+pkg-url = "{ repo }/releases/download/v{ version }/bob-{ target-family }-{ target-arch }{ archive-suffix }"
+bin-dir = "bob-{ target-family }-{ target-arch }/{ bin }{ binary-ext }"
+pkg-fmt = "zip"
+disabled-strategies = ["quick-install"]
+
+[package.metadata.binstall.overrides.aarch64-apple-darwin]
+pkg-url = "{ repo }/releases/download/v{ version }/bob-macos-arm.{ archive-format }"
+bin-dir = "bob-macos-arm/{ bin }"
+
+[package.metadata.binstall.overrides.x86_64-apple-darwin]
+pkg-url = "{ repo }/releases/download/v{ version }/bob-macos-x86_64.{ archive-format }"
+bin-dir = "bob-macos-x86_64/{ bin }"
+
