--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bob-nvim"
-edition = "2021"
+edition = "2024"
 version = "4.1.2"
 description = "A version manager for neovim"
 readme = "README.md"
@@ -8,7 +8,7 @@ keywords = ["neovim", "version-manager"]
 categories = ["command-line-utilities"]
 license = "MIT"
 repository = "https://github.com/MordechaiHadad/bob"
-rust-version = "1.82"
+rust-version = "1.85"
 
 [features]
 default = ["rustls-tls"]
@@ -101,6 +101,11 @@ name = "bob"
 proc-macro = false
 required-features = []
 
+[profile.dev]
+opt-level = 1
+codegen-units = 256
+incremental = true
+
 [profile.optimized]
 inherits = "release"
 opt-level = "z"
@@ -121,4 +126,3 @@ bin-dir = "bob-macos-arm/{ bin }"
 [package.metadata.binstall.overrides.x86_64-apple-darwin]
 pkg-url = "{ repo }/releases/download/v{ version }/bob-macos-x86_64.{ archive-format }"
 bin-dir = "bob-macos-x86_64/{ bin }"
-
